--- a/.github/ISSUE_TEMPLATE/certification.yml
+++ b/.github/ISSUE_TEMPLATE/certification.yml
@@ -3,8 +3,8 @@ description: Track a Certification goal.
 title: "[Certification Name]"
 labels:
   - ":scroll: Certification"
-assignees: @ndouglas
-
+assignees:
+  - ndouglas
 body:
   - type: markdown
     attributes:
