--- a/.github/ISSUE_TEMPLATE/certification.yml
+++ b/.github/ISSUE_TEMPLATE/certification.yml
@@ -1,5 +1,5 @@
 name: Certification
-description: Track a Certification goal.
+description: Track a Certification.
 title: "[Certification Name]"
 labels:
   - ":scroll: Certification"
